--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -69,6 +73,11 @@
             <artifactId>paper-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.TeamKUN.TeamKUNPluginManager</groupId>
+            <artifactId>KPMDaemon</artifactId>
+            <version>f115ac0398</version>
         </dependency>
     </dependencies>
 </project>
