--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,4 @@ api-version: 1.16
 author: Peyang
 description: KPMTester
 website: https://peya.tokyo
-prefix: kpmtester
-
-depend:
-  - PeyangATM
+prefix: KPMTester
