--- a/src/main/resources/kpm.yml
+++ b/src/main/resources/kpm.yml
@@ -1,4 +1,4 @@
-kpm: 3.0.0-pre8
+kpm: 3.0.0-pre9
 update: gh>PeyaPeyaPeyang/KPMTester
 
 hooks: [net.kunmc.lab.kpmtester.TestHook]
@@ -7,3 +7,5 @@ recipes:
   - kpmtest_withkey
   - kpmtest_dummy3
   - kpmtest_fullkey:dummy4
+
+allowManuallyInstall: false
